--- a/index.html
+++ b/index.html
@@ -26,17 +26,22 @@
       <li>Categories</li>
     </ul>
   </nav>
-
+  <main>
+    
   <!-- main section -->
-
+  
   <section id="main-section">
     <img src="./assets/images/image-web-3-desktop.jpg" alt="image-web-3-desktop">
-    <h1>The Bright Future of Web 3.0?</h1>
-    <p>  
-      We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
-      But is it really fulfilling its promise?
-    </p>
-    <button>Read more</button>
+    <div id="description">
+      <h1>The Bright Future of Web 3.0?</h1>
+      <div>
+        <p>  
+          We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
+          But is it really fulfilling its promise?
+        </p>
+        <button>Read more</button>
+      </div>
+    </div>
   </section>
 
   <!--side bar-->
@@ -49,12 +54,14 @@
         Will hydrogen-fueled cars ever catch up to EVs?
       </p>
     </div>
+    <hr>
     <div>
       <h4>The Downsides of AI Artistry</h4>
       <p>
         What are the possible adverse effects of on-demand AI image generation?
       </p>
     </div>
+    <hr>
     <div>
       <h4>Is VC Funding Drying Up?</h4>
       <p>    
@@ -93,7 +100,7 @@
       </div>
     </div>
     <div>
-      <img src="./assets/images/image-gaming-growth.jpg" alt="image-gaming-growth>
+      <img src="./assets/images/image-gaming-growth.jpg" alt="image-gaming-growth">
       <div>
         <span>
           03
@@ -107,8 +114,7 @@
       </div>
     </div>
   </section>
- 
-  
+  </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
